--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title> Front </title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root">
+        
+    </div>
 </body>
 
 </html>
